@@ -39,18 +39,18 @@ dependencies:
   required:
     php: ^7
     composer:
-      horde/Autoloader: '*'
-      horde/Argv: '*'
-      horde/Cli: ^3
-      horde/Cli_Modular: ^3
-      horde/Http: '*'
-      horde/Pear: '*'
-      horde/Role: '*'
-      horde/Text_Diff: '*'
-      horde/Util: '*'
-      horde/Injector: '*'
-      horde/Release: '*'
-      horde/Yaml: '*'
+      horde/autoloader: '*'
+      horde/argv: '*'
+      horde/cli: ^3
+      horde/cli_modular: ^3
+      horde/http: '*'
+      horde/pear: '*'
+      horde/role: '*'
+      horde/text_diff: '*'
+      horde/util: '*'
+      horde/injector: '*'
+      horde/release: '*'
+      horde/yaml: '*'
   optional:
     composer:
       horde/test: 3
