@@ -1,5 +1,4 @@
 {
-    "minimum-stability": "dev",
     "name": "horde/components",
     "description": "Developer tool for managing Horde components",
     "type": "horde-application",
@@ -22,7 +21,7 @@
             "role": "contributor"
         }
     ],
-    "time": "2021-07-04",
+    "time": "2021-07-19",
     "repositories": [
         {
             "type": "composer",
@@ -30,24 +29,24 @@
         }
     ],
     "require": {
-        "horde/horde-installer-plugin": "dev-FRAMEWORK_6_0 || *",
+        "horde/horde-installer-plugin": "*",
         "php": "^7",
-        "horde/autoloader": "* || dev-FRAMEWORK_6_0",
-        "horde/argv": "* || dev-FRAMEWORK_6_0",
-        "horde/cli": "^3 || dev-FRAMEWORK_6_0",
-        "horde/cli_modular": "^3 || dev-FRAMEWORK_6_0",
-        "horde/http": "* || dev-FRAMEWORK_6_0",
-        "horde/pear": "* || dev-FRAMEWORK_6_0",
-        "horde/pole": "* || dev-FRAMEWORK_6_0",
-        "horde/text_diff": "* || dev-FRAMEWORK_6_0",
-        "horde/util": "* || dev-FRAMEWORK_6_0",
-        "horde/injector": "* || dev-FRAMEWORK_6_0",
-        "horde/release": "* || dev-FRAMEWORK_6_0",
-        "horde/yaml": "* || dev-FRAMEWORK_6_0"
+        "horde/autoloader": "*",
+        "horde/argv": "*",
+        "horde/cli": "^3",
+        "horde/cli_modular": "^3",
+        "horde/http": "*",
+        "horde/pear": "*",
+        "horde/role": "*",
+        "horde/text_diff": "*",
+        "horde/util": "*",
+        "horde/injector": "*",
+        "horde/release": "*",
+        "horde/yaml": "*"
     },
     "require-dev": {},
     "suggest": {
-        "horde/test": "3 || dev-FRAMEWORK_6_0",
+        "horde/test": 3,
         "squizlabs/php_codesniffer": "^3.5",
         "pear/archive_tar": "^1.4",
         "sebastian/phpcpd": "^6",
